src/test/resources/Parser/SyntaxErrors/NotEnoughArgumentsAssign.front
class A:
    f() {
        i: int64, j: int64 = -6;
    }